--- a/Task 1.ipynb
+++ b/Task 1.ipynb
@@ -5,7 +5,7 @@
    "id": "e13ba71d",
    "metadata": {},
    "source": [
-    "## Author - Riddhiman Das"
+    "## Author - Sanjali Mehta"
    ]
   },
   {
