--- a/Task 1.ipynb
+++ b/Task 1.ipynb
@@ -21,7 +21,7 @@
    "id": "74c2e628",
    "metadata": {},
    "source": [
-    "## Task(1)-Object Detection \n",
+    "## Project - Object Detection \n",
     "\n",
     "Implementing an Object Detector for detecting the class of objects in any sample image or a video"
    ]
